compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__tuple_int.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "let #(a, b) = 1"
---
----- SOURCE CODE
let #(a, b) = 1

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.rakun:1:5
  │
1 │ let #(a, b) = 1
  │     ^^^^^^^

Expected type:

    Int

Found type:

    #(a, b)
