compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__type_annotations.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "fn inc(x: a) { x + 1 }"
---
error: Type mismatch
  ┌─ /src/one/two.rakun:1:16
  │
1 │ fn inc(x: a) { x + 1 }
  │                ^

The + operator expects arguments of this type:

    Int

But this argument has this type:

    a
