compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__type_holes2.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 1723
expression: "\n@external(erlang, \"a\", \"b\")\nfn main() -> List<_>\n"
---
----- SOURCE CODE

@external(erlang, "a", "b")
fn main() -> List<_>


----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.rakun:3:19
  │
3 │ fn main() -> List<_>
  │                   ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
