compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__type_holes4.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: type X = List<_>
---
----- SOURCE CODE
type X = List<_>

----- ERROR
error: Unexpected type hole
  ┌─ /src/one/two.rakun:1:15
  │
1 │ type X = List<_>
  │               ^ I need to know what this is

We need to know the exact type here so type holes cannot be used.
